Fixes the slogan weight on mobile

--- a/app/assets/stylesheets/pages/home/sections/welcome.scss
+++ b/app/assets/stylesheets/pages/home/sections/welcome.scss
@@ -51,7 +51,8 @@
     transform: translate(-50%, -50%);
 
     img {
-      max-width: 400px;
+      width: 400px;
+      max-width: 100%;
       animation: wheel 10s linear infinite;
     }
   }
